k8s/the-project/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: the-project
  labels:
    client: mk.imti.co
    env: dev
