k8s/the-project/10-deployment-ok.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok
  namespace: the-project
  labels:
    app: ok
    client: mk.imti.co
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ok
  template:
    metadata:
      namespace: the-project
      labels:
        app: ok
        client: mk.imti.co
        env: dev
    spec:
      containers:
      - name: ok
        image: txn2/ok
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
