k8s/the-project/50-service-ok.yml
apiVersion: v1
kind: Service
metadata:
  name: ok
  namespace: the-project
  labels:
    app: ok
    client: mk.imti.co
    env: dev
spec:
  selector:
    app: ok
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: ClusterIP
